7150
Oh, and
{noformat}
scala> h(g)
<console>:11: error: type mismatch;
 found   : ((Int, Int)) => Int
 required: (Int, Int) => Int
              h(g)
                ^
{noformat}
